--- a/r/to_official_web.html
+++ b/r/to_official_web.html
@@ -24,7 +24,7 @@ function getMobileOS() {
 <script>
 function DetectAndServe(){
     let os = getMobileOS();
-    window.location.href = "https://tukuttemita.com/"; 
+    window.location.href = "https://tukuttemita.notion.site/63c84ae40f60422aa95ed0b9b7cdfc6f"; 
 }
 </script>
 </head>
