--- a/r/s.html
+++ b/r/s.html
@@ -25,13 +25,13 @@ function getMobileOS() {
 function DetectAndServe(){
     let os = getMobileOS();
     if (os == "Android") {
-        window.location.href = "https://play.google.com/store/apps/details?id=jp.labboy.limiterflutter"; 
+        window.location.href = "https://play.google.com/store/apps/details?id=com.soconeo&hl=ja"; 
     } else if (os == "iOS") {
-        window.location.href = "https://apps.apple.com/jp/app/id1027284532";
+        window.location.href = "https://apps.apple.com/jp/app/id1120010427";
     } else if (os == "Windows Phone") {
-        window.location.href = "https://apps.apple.com/jp/app/id1027284532";
+        window.location.href = "https://apps.apple.com/jp/app/id1120010427";
     } else {
-        window.location.href = "https://apps.apple.com/jp/app/id1027284532";
+        window.location.href = "https://apps.apple.com/jp/app/id1120010427";
     }
 }
 </script>
