--- a/r/p.html
+++ b/r/p.html
@@ -1,1 +1,41 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="utf-8" />
+<script>
+function getMobileOS() {
+  var userAgent = navigator.userAgent || navigator.vendor || window.opera;
 
+    if (/windows phone/i.test(userAgent)) {
+        return "Windows Phone";
+    }
+
+    if (/android/i.test(userAgent)) {
+        return "Android";
+    }
+
+    if (/iPad|iPhone|iPod/.test(userAgent) && !window.MSStream) {
+        return "iOS";
+    }
+
+    return "unknown";
+}</script>
+
+<script>
+function DetectAndServe(){
+    let os = getMobileOS();
+    if (os == "Android") {
+        window.location.href = "https://play.google.com/store/apps/details?id=com.pass_manager&hl=ja"; 
+    } else if (os == "iOS") {
+        window.location.href = "https://apps.apple.com/jp/app/id6446795912";
+    } else if (os == "Windows Phone") {
+        window.location.href = "https://apps.apple.com/jp/app/id6446795912";
+    } else {
+        window.location.href = "https://apps.apple.com/jp/app/id6446795912";
+    }
+}
+</script>
+</head>
+<body onload="DetectAndServe()">
+</body>
+</html>
