--- a/r/n.html
+++ b/r/n.html
@@ -25,7 +25,7 @@ function getMobileOS() {
 function DetectAndServe(){
     let os = getMobileOS();
     if (os == "Android") {
-        window.location.href = "https://play.google.com/store/apps/details?id=jp.labboy.limiterflutter"; 
+        window.location.href = "https://play.google.com/store/apps/details?id=com.okusurinondemita.okusuri_nondemita"; 
     } else if (os == "iOS") {
         window.location.href = "https://apps.apple.com/jp/app/id1027284532";
     } else if (os == "Windows Phone") {
